<package>
  <name>auckbot_gazebo</name>
  <version>0.1.0</version>
  <description>auckbot_gazebo</description>
  <maintainer email="post@henkelchristian.de">Christian Henkel</maintainer>

  <license>GPLv2</license>

  <author email="post@henkelchristian.de">Christian Henkel</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>auckbot_description</run_depend>
  <run_depend>auckbot_control</run_depend> 
  <run_depend>gazebo_ros</run_depend>  
  <run_depend>roscpp</run_depend> 
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
