<?xml version="1.0"?>
<package>
  <name>auckbot_navigation</name>
  <version>0.0.0</version>
  <description>The auckbot_navigation package</description>

  <maintainer email="post@henkelchristian.de">Christian Henkel</maintainer>

  <license>GPLv2</license>

  <author email="post@henkelchristian.de">Christian Henkel</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>move_base_msgs</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rtabmap</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>amcl</run_depend>   
  <run_depend>move_base</run_depend>   
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>auckbot_analysis</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
