<?xml version="1.0"?>
<package>
  <name>auckbot_teleop</name>
  <version>0.0.0</version>
  <description>The auckbot_teleop package</description>

  <maintainer email="post@henkelchristian.de">Christian Henkel</maintainer>

  <license>GPLv2</license>

  <author email="post@henkelchristian.de">Christian Henkel</author>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/auckbot_teleop</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>ncurses</build_depend>
  <build_depend>auckbot_gazebo</build_depend>
 
  <run_depend>cob_teleop</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ncurses</run_depend>
  <run_depend>auckbot_gazebo</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
